edit protocol: remove param sex and append param username to register method; added tokens in reg

--- a/public/index.html
+++ b/public/index.html
@@ -384,22 +384,27 @@
 							<tr>
 								<th>email</th>
 								<td>Имейл пользователя</td>
+								<td>String. Соблюдать формат email. Уникальынй.</td>
 							</tr>
 							<tr>
 								<th>firstName</th>
 								<td>Имя</td>
+								<td>String</td>
 							</tr>
 							<tr>
 								<th>lastName</th>
 								<td>Фамилия</td>
+								<td>String</td>
 							</tr>
 							<tr>
 								<th>password</th>
 								<td>Пароль</td>
+								<td>String</td>
 							</tr>
 							<tr>
-								<th>sex</th>
-								<td>Пол</td>
+								<th>userName?</th>
+								<td>UserName пользователя</td>
+								<td>String. Уникальный.</td>
 							</tr>
 						</table>
 						
@@ -490,7 +495,7 @@
 								<th>Email</th>
 								<td>Email пользователя</td>
 							</tr>	
-						</table>
+						</table>Регистрация_пользователя_по_email
 
 					<h2 id="Изображение">Изображение</h2>
 						<table class="table table-bordered">
